# AdventOfCode

./: .gitignore  AdventOfCode.code-workspace  AdventOfCode2022.code-workspace  Cargo.toml  README.md
.cargo/: config.toml
2022/: README.md  rust2022.code-workspace
2022/.cargo/: config.toml
2022/day_11/: README.md
2022/day_5/: Cargo.toml
2022/rust/: Cargo.toml  README.md
2023/: README.md
2023/day_01/: README.md
2023/day_04/: Cargo.toml  README.md
2023/day_06/: README.md
2023/day_07/: Cargo.toml
2023/day_10/: README.md
2023/rust/: Cargo.toml  rustfmt.toml
2023/rust/day_01/: README.md
2023/rust/day_01/src/: main.rs
2023/rust/day_02/: Cargo.toml  README.md
2023/rust/day_02/src/: lib.rs  main.rs
2023/rust/day_03/: Cargo.toml  README.md
2023/rust/day_03/src/: lib.rs  main.rs
2023/rust/day_04/: README.md
2023/rust/day_04/src/: card.rs  main.rs
2023/rust/day_05/: Cargo.toml  README.md
2023/rust/day_05/benches/: parallel.rs
2023/rust/day_05/src/: lib.rs  main.rs  parser.rs
2023/rust/day_06/: README.md
2023/rust/day_07/: Cargo.toml  README.md
2023/rust/day_07/src/: card.rs  error.rs  hand.rs  hand_jocker.rs  hand_type.rs  lib.rs  main.rs
2023/rust/day_07/src/hand/: card.rs
2023/rust/day_07/src/hand_jocker/: card.rs
2023/rust/day_08/: Cargo.toml  README.md
2023/rust/day_08/src/: lib.rs  network.rs  node.rs  tui.rs
2023/rust/day_08/src/network/: custom_iter.rs  endless_iter.rs  iter.rs
2023/rust/day_09/: README.md
2023/rust/day_09/src/: lib.rs
2023/rust/day_10/: Cargo.toml  README.md  bacon.toml
2023/rust/day_10/src/: lib.rs  main.rs  pipe.rs  queue.rs  tui.rs
2023/rust/queue/src/: lib.rs
2024/day_02/: README.md
2024/day_03/: README.md
2024/rust/: Cargo.toml  (+1 more)
2025/: Cargo.toml  README.md  justfile
day_1/: Cargo.toml  README.md
day_10/: Cargo.toml  README.md
day_11/: Cargo.toml  README.md
day_11/src/: lib.rs  monkey.rs  parser.rs
day_11/src/monkey/: item.rs  operation.rs  parser.rs  test.rs  utils.rs
day_12/: README.md
day_2/: README.md
day_3/: README.md
day_4/: README.md
day_5/: README.md
day_7/: Cargo.toml  README.md
day_8/: README.md
day_9/: Cargo.toml  README.md
(+101 files in other folders)
