[package]
name = "monkey_in_the_middle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
miette = { version = "5.10.0", features = ["fancy"] }
nom.workspace = true
nom-supreme = "0.8.0"
nom_locate = "4.2.0"
pretty_assertions.workspace = true
thiserror.workspace = true
