[workspace]
members = ["day_*", "queue"]
resolver = "2"

[workspace.dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
nom = { version = "*" }
thiserror = { version = "1.0.50" }
rstest = { version = "0.21" }
pretty_assertions = { version = "*" }
miette = { version = "7", features = ["fancy"] }
anyhow = { version = "1.0.86" }
