[package]
name = "day_05"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom.workspace = true
thiserror.workspace = true

[dev-dependencies]
criterion = { workspace = true }
rstest.workspace = true

[[bench]]
name = "part1"
harness = false
