[package]
name = "day_07"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
rstest.workspace = true
pretty_assertions.workspace = true

[dependencies]
# itertools = "0.12.0"
miette = { workspace = true, features = ["fancy"] }
thiserror.workspace = true
# nom = "*"
# tracing = "*"
# tracing-subscriber = "*"
# nom-supreme = "*"
